src/parse/grammars/querylangParser.py
# Generated from /root/autodl-tmp/xiao/CFG_generate/grammars_samples/querylang.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class querylangParser ( Parser ):

    grammarFileName = "querylang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'AND'", "'OR'", "'('", "')'", "'DATE'", 
                     "'CURRENT'", "'-'", "'PATH'", "'NAME'", "'CONTAINS'", 
                     "'SIZE'", "'FILE_SIZE'", "'TYPE'", "'DURATION'", "'META_TYPE'", 
                     "'IS'", "'WITH'", "'META_VALUE'", "'QUANTITY'", "'='", 
                     "'CONTENT'", "'EQUALS'", "'FILE'", "'<'", "'>'", "'!='", 
                     "'<='", "'>='", "'IS NOT'", "' '" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "SPACE", "STRING", "NUMBER_VALUE" ]

    RULE_query = 0
    RULE_primary = 1
    RULE_binaryExpression = 2
    RULE_searchCondition = 3
    RULE_dateSearch = 4
    RULE_binaryDateSearch = 5
    RULE_dateSearchinfo = 6
    RULE_relativelydate = 7
    RULE_absolutedate = 8
    RULE_pathSearch = 9
    RULE_nameSearch = 10
    RULE_sizeSearch = 11
    RULE_typeSearch = 12
    RULE_durationSearch = 13
    RULE_metaSearch = 14
    RULE_quantityCondition = 15
    RULE_contentSearch = 16
    RULE_comparison_type = 17
    RULE_string = 18
    RULE_filename = 19
    RULE_is_or_not = 20

    ruleNames =  [ "query", "primary", "binaryExpression", "searchCondition", 
                   "dateSearch", "binaryDateSearch", "dateSearchinfo", "relativelydate", 
                   "absolutedate", "pathSearch", "nameSearch", "sizeSearch", 
                   "typeSearch", "durationSearch", "metaSearch", "quantityCondition", 
                   "contentSearch", "comparison_type", "string", "filename", 
                   "is_or_not" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    SPACE=30
    STRING=31
    NUMBER_VALUE=32

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class QueryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primary(self):
            return self.getTypedRuleContext(querylangParser.PrimaryContext,0)


        def EOF(self):
            return self.getToken(querylangParser.EOF, 0)

        def getRuleIndex(self):
            return querylangParser.RULE_query

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQuery" ):
                listener.enterQuery(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQuery" ):
                listener.exitQuery(self)




    def query(self):

        localctx = querylangParser.QueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_query)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            self.primary()
            self.state = 43
            self.match(querylangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrimaryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def binaryExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(querylangParser.BinaryExpressionContext)
            else:
                return self.getTypedRuleContext(querylangParser.BinaryExpressionContext,i)


        def SPACE(self, i:int=None):
            if i is None:
                return self.getTokens(querylangParser.SPACE)
            else:
                return self.getToken(querylangParser.SPACE, i)

        def getRuleIndex(self):
            return querylangParser.RULE_primary

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrimary" ):
                listener.enterPrimary(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrimary" ):
                listener.exitPrimary(self)




    def primary(self):

        localctx = querylangParser.PrimaryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_primary)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self.binaryExpression()
            self.state = 56
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==30:
                self.state = 54
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 46
                    self.match(querylangParser.SPACE)
                    self.state = 47
                    self.match(querylangParser.T__0)
                    self.state = 48
                    self.match(querylangParser.SPACE)
                    self.state = 49
                    self.binaryExpression()
                    pass

                elif la_ == 2:
                    self.state = 50
                    self.match(querylangParser.SPACE)
                    self.state = 51
                    self.match(querylangParser.T__1)
                    self.state = 52
                    self.match(querylangParser.SPACE)
                    self.state = 53
                    self.binaryExpression()
                    pass


                self.state = 58
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BinaryExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primary(self):
            return self.getTypedRuleContext(querylangParser.PrimaryContext,0)


        def searchCondition(self):
            return self.getTypedRuleContext(querylangParser.SearchConditionContext,0)


        def getRuleIndex(self):
            return querylangParser.RULE_binaryExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBinaryExpression" ):
                listener.enterBinaryExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBinaryExpression" ):
                listener.exitBinaryExpression(self)




    def binaryExpression(self):

        localctx = querylangParser.BinaryExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_binaryExpression)
        try:
            self.state = 64
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 59
                self.match(querylangParser.T__2)
                self.state = 60
                self.primary()
                self.state = 61
                self.match(querylangParser.T__3)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 63
                self.searchCondition()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SearchConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def dateSearch(self):
            return self.getTypedRuleContext(querylangParser.DateSearchContext,0)


        def pathSearch(self):
            return self.getTypedRuleContext(querylangParser.PathSearchContext,0)


        def nameSearch(self):
            return self.getTypedRuleContext(querylangParser.NameSearchContext,0)


        def sizeSearch(self):
            return self.getTypedRuleContext(querylangParser.SizeSearchContext,0)


        def typeSearch(self):
            return self.getTypedRuleContext(querylangParser.TypeSearchContext,0)


        def durationSearch(self):
            return self.getTypedRuleContext(querylangParser.DurationSearchContext,0)


        def metaSearch(self):
            return self.getTypedRuleContext(querylangParser.MetaSearchContext,0)


        def quantityCondition(self):
            return self.getTypedRuleContext(querylangParser.QuantityConditionContext,0)


        def contentSearch(self):
            return self.getTypedRuleContext(querylangParser.ContentSearchContext,0)


        def getRuleIndex(self):
            return querylangParser.RULE_searchCondition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSearchCondition" ):
                listener.enterSearchCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSearchCondition" ):
                listener.exitSearchCondition(self)




    def searchCondition(self):

        localctx = querylangParser.SearchConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_searchCondition)
        try:
            self.state = 75
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3, 5]:
                self.enterOuterAlt(localctx, 1)
                self.state = 66
                self.dateSearch()
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 2)
                self.state = 67
                self.pathSearch()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 3)
                self.state = 68
                self.nameSearch()
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 4)
                self.state = 69
                self.sizeSearch()
                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 5)
                self.state = 70
                self.typeSearch()
                pass
            elif token in [14]:
                self.enterOuterAlt(localctx, 6)
                self.state = 71
                self.durationSearch()
                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 7)
                self.state = 72
                self.metaSearch()
                pass
            elif token in [19]:
                self.enterOuterAlt(localctx, 8)
                self.state = 73
                self.quantityCondition()
                pass
            elif token in [21]:
                self.enterOuterAlt(localctx, 9)
                self.state = 74
                self.contentSearch()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DateSearchContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def binaryDateSearch(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(querylangParser.BinaryDateSearchContext)
            else:
                return self.getTypedRuleContext(querylangParser.BinaryDateSearchContext,i)


        def SPACE(self, i:int=None):
            if i is None:
                return self.getTokens(querylangParser.SPACE)
            else:
                return self.getToken(querylangParser.SPACE, i)

        def getRuleIndex(self):
            return querylangParser.RULE_dateSearch

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDateSearch" ):
                listener.enterDateSearch(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDateSearch" ):
                listener.exitDateSearch(self)




    def dateSearch(self):

        localctx = querylangParser.DateSearchContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_dateSearch)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.binaryDateSearch()
            self.state = 88
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 86
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                    if la_ == 1:
                        self.state = 78
                        self.match(querylangParser.SPACE)
                        self.state = 79
                        self.match(querylangParser.T__0)
                        self.state = 80
                        self.match(querylangParser.SPACE)
                        self.state = 81
                        self.binaryDateSearch()
                        pass

                    elif la_ == 2:
                        self.state = 82
                        self.match(querylangParser.SPACE)
                        self.state = 83
                        self.match(querylangParser.T__1)
                        self.state = 84
                        self.match(querylangParser.SPACE)
                        self.state = 85
                        self.binaryDateSearch()
                        pass

             
                self.state = 90
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BinaryDateSearchContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def dateSearchinfo(self):
            return self.getTypedRuleContext(querylangParser.DateSearchinfoContext,0)


        def getRuleIndex(self):
            return querylangParser.RULE_binaryDateSearch

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBinaryDateSearch" ):
                listener.enterBinaryDateSearch(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBinaryDateSearch" ):
                listener.exitBinaryDateSearch(self)




    def binaryDateSearch(self):

        localctx = querylangParser.BinaryDateSearchContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_binaryDateSearch)
        try:
            self.state = 96
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 91
                self.match(querylangParser.T__2)
                self.state = 92
                self.dateSearchinfo()
                self.state = 93
                self.match(querylangParser.T__3)
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 2)
                self.state = 95
                self.dateSearchinfo()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DateSearchinfoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SPACE(self, i:int=None):
            if i is None:
                return self.getTokens(querylangParser.SPACE)
            else:
                return self.getToken(querylangParser.SPACE, i)

        def comparison_type(self):
            return self.getTypedRuleContext(querylangParser.Comparison_typeContext,0)


        def absolutedate(self):
            return self.getTypedRuleContext(querylangParser.AbsolutedateContext,0)


        def relativelydate(self):
            return self.getTypedRuleContext(querylangParser.RelativelydateContext,0)


        def getRuleIndex(self):
            return querylangParser.RULE_dateSearchinfo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDateSearchinfo" ):
                listener.enterDateSearchinfo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDateSearchinfo" ):
                listener.exitDateSearchinfo(self)




    def dateSearchinfo(self):

        localctx = querylangParser.DateSearchinfoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_dateSearchinfo)
        try:
            self.state = 110
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 98
                self.match(querylangParser.T__4)
                self.state = 99
                self.match(querylangParser.SPACE)
                self.state = 100
                self.comparison_type()
                self.state = 101
                self.match(querylangParser.SPACE)
                self.state = 102
                self.absolutedate()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 104
                self.match(querylangParser.T__4)
                self.state = 105
                self.match(querylangParser.SPACE)
                self.state = 106
                self.comparison_type()
                self.state = 107
                self.match(querylangParser.SPACE)
                self.state = 108
                self.relativelydate()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RelativelydateContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SPACE(self, i:int=None):
            if i is None:
                return self.getTokens(querylangParser.SPACE)
            else:
                return self.getToken(querylangParser.SPACE, i)

        def string(self):
            return self.getTypedRuleContext(querylangParser.StringContext,0)


        def getRuleIndex(self):
            return querylangParser.RULE_relativelydate

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRelativelydate" ):
                listener.enterRelativelydate(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRelativelydate" ):
                listener.exitRelativelydate(self)




    def relativelydate(self):

        localctx = querylangParser.RelativelydateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_relativelydate)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(querylangParser.T__5)
            self.state = 113
            self.match(querylangParser.SPACE)
            self.state = 114
            self.match(querylangParser.T__6)
            self.state = 115
            self.match(querylangParser.SPACE)
            self.state = 116
            self.string()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AbsolutedateContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(querylangParser.STRING, 0)

        def getRuleIndex(self):
            return querylangParser.RULE_absolutedate

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAbsolutedate" ):
                listener.enterAbsolutedate(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAbsolutedate" ):
                listener.exitAbsolutedate(self)




    def absolutedate(self):

        localctx = querylangParser.AbsolutedateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_absolutedate)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(querylangParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PathSearchContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SPACE(self, i:int=None):
            if i is None:
                return self.getTokens(querylangParser.SPACE)
            else:
                return self.getToken(querylangParser.SPACE, i)

        def is_or_not(self):
            return self.getTypedRuleContext(querylangParser.Is_or_notContext,0)


        def string(self):
            return self.getTypedRuleContext(querylangParser.StringContext,0)


        def getRuleIndex(self):
            return querylangParser.RULE_pathSearch

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPathSearch" ):
                listener.enterPathSearch(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPathSearch" ):
                listener.exitPathSearch(self)




    def pathSearch(self):

        localctx = querylangParser.PathSearchContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_pathSearch)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(querylangParser.T__7)
            self.state = 121
            self.match(querylangParser.SPACE)
            self.state = 122
            self.is_or_not()
            self.state = 123
            self.match(querylangParser.SPACE)
            self.state = 124
            self.string()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NameSearchContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SPACE(self, i:int=None):
            if i is None:
                return self.getTokens(querylangParser.SPACE)
            else:
                return self.getToken(querylangParser.SPACE, i)

        def string(self):
            return self.getTypedRuleContext(querylangParser.StringContext,0)


        def getRuleIndex(self):
            return querylangParser.RULE_nameSearch

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNameSearch" ):
                listener.enterNameSearch(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNameSearch" ):
                listener.exitNameSearch(self)




    def nameSearch(self):

        localctx = querylangParser.NameSearchContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_nameSearch)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(querylangParser.T__8)
            self.state = 127
            self.match(querylangParser.SPACE)
            self.state = 128
            self.match(querylangParser.T__9)
            self.state = 129
            self.match(querylangParser.SPACE)
            self.state = 130
            self.string()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SizeSearchContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SPACE(self, i:int=None):
            if i is None:
                return self.getTokens(querylangParser.SPACE)
            else:
                return self.getToken(querylangParser.SPACE, i)

        def comparison_type(self):
            return self.getTypedRuleContext(querylangParser.Comparison_typeContext,0)


        def string(self):
            return self.getTypedRuleContext(querylangParser.StringContext,0)


        def filename(self):
            return self.getTypedRuleContext(querylangParser.FilenameContext,0)


        def getRuleIndex(self):
            return querylangParser.RULE_sizeSearch

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSizeSearch" ):
                listener.enterSizeSearch(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSizeSearch" ):
                listener.exitSizeSearch(self)




    def sizeSearch(self):

        localctx = querylangParser.SizeSearchContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_sizeSearch)
        try:
            self.state = 146
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 132
                self.match(querylangParser.T__10)
                self.state = 133
                self.match(querylangParser.SPACE)
                self.state = 134
                self.comparison_type()
                self.state = 135
                self.match(querylangParser.SPACE)
                self.state = 136
                self.string()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 138
                self.match(querylangParser.T__10)
                self.state = 139
                self.match(querylangParser.SPACE)
                self.state = 140
                self.comparison_type()
                self.state = 141
                self.match(querylangParser.SPACE)
                self.state = 142
                self.match(querylangParser.T__11)
                self.state = 143
                self.match(querylangParser.SPACE)
                self.state = 144
                self.filename()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeSearchContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SPACE(self, i:int=None):
            if i is None:
                return self.getTokens(querylangParser.SPACE)
            else:
                return self.getToken(querylangParser.SPACE, i)

        def is_or_not(self):
            return self.getTypedRuleContext(querylangParser.Is_or_notContext,0)


        def string(self):
            return self.getTypedRuleContext(querylangParser.StringContext,0)


        def getRuleIndex(self):
            return querylangParser.RULE_typeSearch

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeSearch" ):
                listener.enterTypeSearch(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypeSearch" ):
                listener.exitTypeSearch(self)




    def typeSearch(self):

        localctx = querylangParser.TypeSearchContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_typeSearch)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self.match(querylangParser.T__12)
            self.state = 149
            self.match(querylangParser.SPACE)
            self.state = 150
            self.is_or_not()
            self.state = 151
            self.match(querylangParser.SPACE)
            self.state = 152
            self.string()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DurationSearchContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SPACE(self, i:int=None):
            if i is None:
                return self.getTokens(querylangParser.SPACE)
            else:
                return self.getToken(querylangParser.SPACE, i)

        def comparison_type(self):
            return self.getTypedRuleContext(querylangParser.Comparison_typeContext,0)


        def string(self):
            return self.getTypedRuleContext(querylangParser.StringContext,0)


        def getRuleIndex(self):
            return querylangParser.RULE_durationSearch

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDurationSearch" ):
                listener.enterDurationSearch(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDurationSearch" ):
                listener.exitDurationSearch(self)




    def durationSearch(self):

        localctx = querylangParser.DurationSearchContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_durationSearch)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            self.match(querylangParser.T__13)
            self.state = 155
            self.match(querylangParser.SPACE)
            self.state = 156
            self.comparison_type()
            self.state = 157
            self.match(querylangParser.SPACE)
            self.state = 158
            self.string()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MetaSearchContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SPACE(self, i:int=None):
            if i is None:
                return self.getTokens(querylangParser.SPACE)
            else:
                return self.getToken(querylangParser.SPACE, i)

        def string(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(querylangParser.StringContext)
            else:
                return self.getTypedRuleContext(querylangParser.StringContext,i)


        def is_or_not(self):
            return self.getTypedRuleContext(querylangParser.Is_or_notContext,0)


        def getRuleIndex(self):
            return querylangParser.RULE_metaSearch

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMetaSearch" ):
                listener.enterMetaSearch(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMetaSearch" ):
                listener.exitMetaSearch(self)




    def metaSearch(self):

        localctx = querylangParser.MetaSearchContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_metaSearch)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            self.match(querylangParser.T__14)
            self.state = 161
            self.match(querylangParser.SPACE)
            self.state = 162
            self.match(querylangParser.T__15)
            self.state = 163
            self.match(querylangParser.SPACE)
            self.state = 164
            self.string()
            self.state = 165
            self.match(querylangParser.SPACE)
            self.state = 166
            self.match(querylangParser.T__16)
            self.state = 167
            self.match(querylangParser.SPACE)
            self.state = 168
            self.match(querylangParser.T__17)
            self.state = 169
            self.match(querylangParser.SPACE)
            self.state = 170
            self.is_or_not()
            self.state = 171
            self.match(querylangParser.SPACE)
            self.state = 172
            self.string()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QuantityConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SPACE(self, i:int=None):
            if i is None:
                return self.getTokens(querylangParser.SPACE)
            else:
                return self.getToken(querylangParser.SPACE, i)

        def NUMBER_VALUE(self):
            return self.getToken(querylangParser.NUMBER_VALUE, 0)

        def getRuleIndex(self):
            return querylangParser.RULE_quantityCondition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQuantityCondition" ):
                listener.enterQuantityCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQuantityCondition" ):
                listener.exitQuantityCondition(self)




    def quantityCondition(self):
